// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageValidators shows a list of validators 1`] = `
<pagecontainer-stub
  hideheader="true"
  loaded="true"
  managed="true"
  subtitle=""
  title=""
>
  <template>
    <div
      class="filterOptions"
    >
      <tmfield-stub
        class="searchField"
        placeholder="Search"
        size="14px"
        type="text"
        value=""
      />
       
      <div
        class="toggles"
      >
        <tmbtn-stub
          class="btn-radio"
          color="primary"
          type="secondary"
          value="All"
        />
         
        <tmbtn-stub
          class="btn-radio"
          color="primary"
          type="primary"
          value="Active"
        />
      </div>
    </div>
     
    <tablevalidators-stub
      showonmobile="expectedReturns"
      validators="[object Object],[object Object],[object Object],[object Object],[object Object]"
    />
     
    <!---->
  </template>
</pagecontainer-stub>
`;

exports[`PageValidators shows a message if still loading 1`] = `
<pagecontainer-stub
  dataempty="true"
  hideheader="true"
  loading="true"
  managed="true"
  subtitle=""
  title=""
>
  <template>
    <div
      class="filterOptions"
    >
      <tmfield-stub
        class="searchField"
        placeholder="Search"
        size="14px"
        type="text"
        value=""
      />
       
      <div
        class="toggles"
      >
        <tmbtn-stub
          class="btn-radio"
          color="primary"
          type="secondary"
          value="All"
        />
         
        <tmbtn-stub
          class="btn-radio"
          color="primary"
          type="primary"
          value="Active"
        />
      </div>
    </div>
     
    <tablevalidators-stub
      showonmobile="expectedReturns"
      validators=""
    />
     
    <!---->
  </template>
</pagecontainer-stub>
`;

exports[`PageValidators shows a message if there is an error to display 1`] = `
<pagecontainer-stub
  dataempty="true"
  error="true"
  hideheader="true"
  loaded="true"
  managed="true"
  subtitle=""
  title=""
>
  <template>
    <div
      class="filterOptions"
    >
      <tmfield-stub
        class="searchField"
        placeholder="Search"
        size="14px"
        type="text"
        value=""
      />
       
      <div
        class="toggles"
      >
        <tmbtn-stub
          class="btn-radio"
          color="primary"
          type="secondary"
          value="All"
        />
         
        <tmbtn-stub
          class="btn-radio"
          color="primary"
          type="primary"
          value="Active"
        />
      </div>
    </div>
     
    <tablevalidators-stub
      showonmobile="expectedReturns"
      validators=""
    />
     
    <!---->
  </template>
</pagecontainer-stub>
`;

exports[`PageValidators shows a message if there is nothing to display 1`] = `
<pagecontainer-stub
  dataempty="true"
  hideheader="true"
  loaded="true"
  managed="true"
  subtitle=""
  title=""
>
  <template>
    <div
      class="filterOptions"
    >
      <tmfield-stub
        class="searchField"
        placeholder="Search"
        size="14px"
        type="text"
        value=""
      />
       
      <div
        class="toggles"
      >
        <tmbtn-stub
          class="btn-radio"
          color="primary"
          type="secondary"
          value="All"
        />
         
        <tmbtn-stub
          class="btn-radio"
          color="primary"
          type="primary"
          value="Active"
        />
      </div>
    </div>
     
    <tablevalidators-stub
      showonmobile="expectedReturns"
      validators=""
    />
     
    <!---->
  </template>
</pagecontainer-stub>
`;
